<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".ConfigurationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige">

        <TextView
            android:id="@+id/title_configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/configuration"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/icono_smart_saw"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.883"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circular_saw_tool_color_icon" />

        <com.example.smartsaw.NumberField
            android:id="@+id/field_motor_speed"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:layout_marginTop="85dp"
            app:labelText="@string/motor_speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_configuration" />

        <com.example.smartsaw.NumberField
            android:id="@+id/field_vertical_limit"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:layout_marginTop="125dp"
            app:labelText="@string/vertical_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/field_motor_speed" />

        <com.example.smartsaw.NumberField
            android:id="@+id/field_left_horizontal_limit"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:layout_marginTop="125dp"
            app:labelText="@string/horizontal_limit_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/field_vertical_limit" />

        <com.example.smartsaw.NumberField
            android:id="@+id/field_right_horizontal_limit"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:layout_marginTop="125dp"
            app:labelText="@string/horizontal_limit_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/field_left_horizontal_limit" />

        <com.example.smartsaw.NumberField
            android:id="@+id/field_error_margin"
            android:layout_width="360dp"
            android:layout_height="85dp"
            android:layout_marginTop="125dp"
            app:labelText="@string/error_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/field_right_horizontal_limit" />

        <ImageButton
            android:id="@+id/btn_configuration_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/btn_wood_back_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_error_margin"
            tools:ignore="ContentDescription" />

        <com.example.smartsaw.ButtonWood
            android:id="@+id/btn_save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="45dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_configuration_back"
            app:layout_constraintTop_toBottomOf="@+id/field_error_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>